sandbox/output
AnagramTest.java:10: error: cannot find symbol
        assertTrue(anagram.generate("a").contains("a"));
                          ^
  symbol:   method generate(String)
  location: variable anagram of type Anagram
1 error
